...
        android:textColor="@color/adark_grey_2"
        android:textSize="15dp"
        android:textStyle="bold"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/view2"
            android:theme="@style/InputTextstyle"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
...
