...
    <string name="report">Report</string>
    <string name="please_insert_name">Please enter your name.</string>
    <string name="alteration_saved">Your changes have been saved.</string>
    <string name="please_insert_password">Please enter your password.</string>
    <string name="please_confirm_password">Please confirm your password.</string>
    <string name="password_dont_match">The passwords are different.</string>
    <string name="password_incomplete">Password must be at least 6 characters long.</string>


    <!--Rating-->
    <string name="rate">Rate</string>
    <string name="ranking">Ranking</string>
    <string name="without_ratings_message">Be the first to review this establishment!</string>
...
